Changed compiler args