@@ -199,6 +199,7 @@
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
+                        <compilerArg>--illegal-access=permit</compilerArg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -233,7 +234,7 @@
 
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
